--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "prestart": "babel-node buildScripts/startMessage.js",
     "start": "npm-run-all --parallel security-check open:src",
     "open:src": "babel-node buildScripts/srcServer.js",
+    "lint": "esw webpack.config.* src buildScripts --color",
     "security-check": "nsp check",
     "localtunnel": "lt --port 3000",
     "share": "npm-run-all --parallel open:src localtunnel"
@@ -27,9 +28,9 @@
     "compression": "1.6.2",
     "cross-env": "3.1.3",
     "css-loader": "0.25.0",
-    "eslint": "3.8.1",
+    "eslint": "^3.8.1",
     "eslint-plugin-import": "2.0.1",
-    "eslint-watch": "2.1.14",
+    "eslint-watch": "^2.1.14",
     "express": "4.14.0",
     "extract-text-webpack-plugin": "1.0.1",
     "html-webpack-plugin": "2.22.0",
